cmake_minimum_required(VERSION 3.15)
project(TheReturn)

set(CMAKE_CXX_STANDARD 17)
add_compile_definitions(RAFIK_FARHAD)

add_executable(precode precode.cpp)
add_executable(1231C "Codeforces/1231_C.cpp")
add_executable(587_A Codeforces/587_A.cpp)
add_executable(587_B Codeforces/587_B.cpp)
add_executable(587_C Codeforces/587_C.cpp)
add_executable(589_A Codeforces/589_A.cpp)
add_executable(589_B Codeforces/589_B.cpp)
add_executable(589_C Codeforces/589_C.cpp)
add_executable(10814 UVA/10814.cpp)
add_executable(BigInt Helper/Classes/BigInt.cpp)
add_executable(E74_A Codeforces/E74_A.cpp)
add_executable(E74_C Codeforces/E74_C.cpp)
add_executable(210_A Codeforces/210_A.cpp)
add_executable(63_A Codeforces/63_A.cpp)